# atlas-work-control-agent1

./: .env.example  .gitignore  ATLAS-RUN-20260712T140717Z-focus-brief.md  ATLAS-RUN-20260712T140717Z-run-log.json  README.md  atlas_work_sample.json  cli.py  focus_brief.py  models.py  nodeids  notion_client.py  pyproject.toml  rules.py  test_rules.py
